Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p>This project presents an implementation of BPA which uses PCL to handle the input 3D cloud information. The output reconstructed mesh is given in <a href="http://people.sc.fsu.edu/%7Ejburkardt/data/off/off.html">OFF format</a>, which can be manipulated using several 3D data visualization software (<a href="http://www.geomview.org/">GeomView</a> for example).</p>
 
-<p><strong>The last stable implementation can be found in the releases page (<a href="https://github.com/rodschulz/BPA/releases">https://github.com/rodschulz/BPA/releases</a>).</strong></p>
+<p><strong>The last stable implementation can be found in the <a href="https://github.com/rodschulz/BPA/releases">releases page</a>.</strong></p>
 
 <p>More information about the algorithm can be found in the following links.</p>
 
